# portfolio-site

./: .gitignore  README.md  portfolio-site.code-workspace  pyproject.toml  requirements.txt  requirements_dev.txt
PortfolioSite/: .coveragerc  manage.py
PortfolioSite/Auth/: admin.py  models.py
PortfolioSite/Auth/migrations/: 0001_initial.py  0002_remove_user_username_alter_user_email.py
PortfolioSite/Blog/: admin.py  models.py
PortfolioSite/Blog/api/: permissions.py  serializers.py  urls.py  views.py
PortfolioSite/Blog/migrations/: 0001_initial.py  0002_remove_comment_content_comment_content_type_and_more.py  0003_profile.py
PortfolioSite/Main/: admin.py  context_processors.py  forms.py  helpers.py  models.py  sitemaps.py  urls.py  views.py
PortfolioSite/Main/migrations/: 0001_initial.py  0002_email_email.py  0002_image_project.py  0003_image_caption_project_order.py  0004_alter_image_order_image_unique_image_order_and_more.py  0005_email_status_alter_email_email.py  0006_alter_email_status.py  0007_project_published.py  0008_remove_image_unique_image_order.py  0009_embed_project_embeds.py  0010_alter_embed_html.py  0011_alter_project_embeds_alter_project_images.py  0012_project_slug.py  0013_project_short_description.py  0014_project_keywords.py  0015_project_last_modified.py  0016_delete_email.py
PortfolioSite/Main/templates/: about.html  contact.html  index.html  inner-page.html  portfolio-details.html
PortfolioSite/PortfolioSite/: asgi.py  settings.py  urls.py  wsgi.py
PortfolioSite/templates/: base.html
portfoliosite/Main/: views.py
(+13 files in other folders)
