[tool.poetry]
name = "portfolio-site"
version = "0.1.0"
description = "Leif's portfolio site"
authors = ["Leif Kjos"]
readme = "README.md"
packages = [{include = "portfolio_site"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
mysqlclient = "*"
python-dotenv = "^1.0.0"
django-solo = "^2.0.0"
Pillow = "^9.5.0"
django-tinymce = "3.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"
mixer = "^7.2.2"
django-debug-toolbar = "^4.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
